--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.19.2",
     "socket.io": "^2.3.0",
     "vue": "^2.6.10",
+    "winston": "^3.2.1",
     "x-ray": "^2.3.4",
     "x-ray-phantom": "^1.0.1"
   }
